# ErgodixDocs

./: .coverage 2  .gitignore  CHANGELOG.md  CLAUDE.md  Hierarchy.md  LICENSE  README.md  SECURITY.md  SprintLog.md  WorkingContext.md  ai.summary.md  auth.py  bootstrap.sh  install_dependencies.sh  local_config.example.py  pyproject.toml  version.py
.claude/: settings.json
adrs/: 0001-click-cli-with-persona-floater-registries.md  0002-repo-topology-and-editor-onboarding.md  0003-cantilever-bootstrap-orchestrator.md  0004-continuous-repo-polling.md  0005-roles-as-floaters-and-opus-naming.md  0006-editor-collaboration-sliced-repos.md  0007-bootstrap-prereqs-cli-entry.md  0008-cleanup-sync-rename-ownership-autofix-static-analysis.md  0009-ci-and-dependency-policy.md  0010-installer-preflight-consent-gate.md  0011-asvrat-story-format-for-persona-stories.md  0012-phase-2-patterns-configure-phase-and-five-phase-orchestrator.md  0013-ai-permitted-actions-boundary.md  0014-sync-transport-and-settings-cascade.md  0015-migrate-from-gdocs.md  0016-ergodix-index-design.md  README.md
diagrams/: ergodix-system-flow.md
docs/: comments-explained.md  devils-toolbox-reference.md  ergodix-map-consumers.md  gcp-setup.md  scoring-methodology.md  wordsmith-toolbox-reference.md
ergodix/: auth.py  cantilever.py  cli.py  connectivity.py  index.py  migrate.py  oauth.py  render.py  settings.py  sync_transport.py  version.py
reviews/: 0013.external-review.md  0015.1.external-review.md  0015.2.external-review.md  0015.3.external-review.md  0015.external-review.md  copilot-pr-reviews.md
scripts/: integration-smoke.sh
security/: 0001-tocttou-symlink-secrets-file.md  0002-parent-dir-permissions-not-enforced.md  0003-migrate-skips-type-validation.md  0004-memory-scrubbing-out-of-scope.md  0005-no-credential-read-audit-trail.md  README.md
spikes/: 0001-orchestrator-pattern.md  0002-repo-topology-editor-onboarding.md  0003-cantilever-semantics.md  0004-roles-as-floaters-and-opus-naming.md  0005-editor-collaboration-integration.md  0006-bootstrap-prereqs-cli-entry.md  0007-ci-and-dependency-policy.md  0008-installer-redesign-preflight-consent.md  0009-phase-2-design-decisions.md  0010-user-writing-preferences-interview.md  0011-sync-transport-and-settings-cascade.md  0012-migrate-from-gdocs-design.md  0013-style-sentinel-and-certificate.md  0014-form-analyzer-ergodite.md  0015-ergodix-index-design.md  README.md
stories/: README.md  SprintLog.md
tests/: build_migrate_docx_fixture.py  conftest.py  test_auth.py  test_cantilever.py  test_cli.py  test_connectivity.py  test_importers_docx.py  test_importers_gdocs.py  test_importers_registry.py  test_index_cli.py  test_index_drift.py  test_index_e2e.py  test_index_helpers.py  test_index_orchestrator.py  test_migrate_fixture.py  test_migrate_helpers.py  test_migrate_manifest_archive.py  test_migrate_orchestrator.py  test_oauth.py  test_prereqs_check_branch_tracking.py  test_prereqs_check_corpus_clone.py  test_prereqs_check_corpus_path.py  test_prereqs_check_credential_prompts.py  test_prereqs_check_credential_store.py  test_prereqs_check_dev_dependencies.py  test_prereqs_check_drive_desktop.py  test_prereqs_check_editor_signing_key.py  test_prereqs_check_gh_auth.py  test_prereqs_check_homebrew.py  (+17 more)
(+62 files in other folders)
