[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ergodix"
dynamic = ["version"]
description = "Architectural co-authoring tool for ergodic-text fiction. Reads, indexes, and analyzes a corpus; never edits prose."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "PolyForm Strict 1.0.0; commercial use requires separate license" }
authors = [
    { name = "Scott R. Ellis" },
]
keywords = ["writing", "ergodic", "fiction", "pandoc", "latex", "ai-assisted"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: Other/Proprietary License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Markup",
]
dependencies = [
    "click>=8.1",
    "keyring>=24",
    "anthropic>=0.40",
    "google-api-python-client>=2.100",
    "google-auth-httplib2>=0.2",
    "google-auth-oauthlib>=1.2",
    "python-docx>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.scripts]
ergodix = "ergodix.cli:main"

[project.urls]
Repository = "https://github.com/scorellis/ErgodixDocs"

# ─── Versioning: read from VERSION file at the project root ─────────────────

[tool.setuptools.dynamic]
version = { file = ["VERSION"] }

[tool.setuptools.packages.find]
include = ["ergodix*"]

# ─── Tooling configuration ──────────────────────────────────────────────────

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=ergodix",
    "--cov-report=term-missing",
    "--cov-fail-under=0",   # bump as coverage grows
]
markers = [
    "integration: marks tests that touch real OS services (keychain, drive, network)",
    "slow: marks tests that take noticeably longer than unit tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "UP",    # pyupgrade
    "RUF",   # ruff-specific rules
    "SIM",   # flake8-simplify
    "PT",    # flake8-pytest-style
    "S",     # flake8-bandit (security)
]
ignore = [
    "S101",  # asserts are fine in tests
    "S603",  # subprocess without shell=True is intentional
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "S106"]   # tests can use placeholder secrets, asserts

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["ergodix"]
exclude = ["tests/", "build/", "dist/"]

[[tool.mypy.overrides]]
module = ["keyring.*", "googleapiclient.*", "google_auth_oauthlib.*", "google.auth.*"]
ignore_missing_imports = true
